--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -6,6 +6,7 @@
     border-radius: 12px;
     font-family: Arial, sans-serif;
     background-color: #fff;
+    text-align: center;
   
     h2 {
       margin-bottom: 20px;
@@ -58,5 +59,23 @@
       color: red;
       font-weight: bold;
     }
+
+    .login-link {
+        text-align: center;
+        margin-top: 20px;
+        font-size: 14px;
+      }
+      
+      .login-link a {
+        color: #007bff;
+        text-decoration: none;
+        font-weight: bold;
+        cursor: pointer;
+      }
+      
+      .login-link a:hover {
+        text-decoration: underline;
+      }
+    
   }
   
