--- a/src/app/dashboard/products/products.component.html
+++ b/src/app/dashboard/products/products.component.html
@@ -1,1 +1,15 @@
-<p>products works!</p>
+<div class="product-count">
+    <strong>{{ products.length }}</strong> PRODUCTS FOUND
+  </div>
+
+<div class="product-grid">
+    <div class="product-card" *ngFor="let product of products">
+      <img [src]="product.image" alt="product" />
+      <h4>{{ product.name }}</h4>
+      <div class="bottom-row">
+        <button (click)="addToCart(product.id)">Add</button>
+        <span class="price">{{ product.price | currency:'GBP' }}</span>
+      </div>
+    </div>
+  </div>
+  
